# OOP_Project

./: .env  Pets_1.ipynb  keys.pk  neurnet.py  pyproject.toml  readme.md  telegrambot.py
neur_oxford/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neur_oxford/variables/: variables.index
